{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 62,
  "lineage": "eb316219-f3c2-2720-2036-04870ae2e4ca",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:internet-gateway/igw-094a55b0a70001e7b",
            "id": "igw-094a55b0a70001e7b",
            "owner_id": "941434651743",
            "tags": {
              "Name": "igw_vpc-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "igw_vpc-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "vpc_id": "vpc-08e7865ac94de7f31"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:route-table/rtb-0ff07a521ef736780",
            "id": "rtb-0ff07a521ef736780",
            "owner_id": "941434651743",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-094a55b0a70001e7b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_crt-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Public_crt-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e7865ac94de7f31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00847dee99b7768bd",
            "route_table_id": "rtb-0ff07a521ef736780",
            "subnet_id": "subnet-06014089d32294a7c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_crt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group/sg-05de3d0c4e9a5fb70",
            "description": "Allow SSH inboun traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05de3d0c4e9a5fb70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Public Subnet SG-aws_security_01-dev-virginia",
            "name_prefix": "",
            "owner_id": "941434651743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Subnet SG-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Public Subnet SG-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e7865ac94de7f31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firewall_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:subnet/subnet-0eb523eb4375dad5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb523eb4375dad5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941434651743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Firewall_Subnet-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Firewall_Subnet-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "vpc_id": "vpc-08e7865ac94de7f31"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:subnet/subnet-09ed468d6c766330b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ed468d6c766330b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941434651743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Private_Subnet-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "vpc_id": "vpc-08e7865ac94de7f31"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:subnet/subnet-06014089d32294a7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06014089d32294a7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941434651743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Public_Subnet-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "vpc_id": "vpc-08e7865ac94de7f31"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:vpc/vpc-08e7865ac94de7f31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d11dc10cf72ffbe3",
            "default_route_table_id": "rtb-003032a99caa085bd",
            "default_security_group_id": "sg-037b5b4c1a3853ebf",
            "dhcp_options_id": "dopt-072044fe87e8f819f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e7865ac94de7f31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-003032a99caa085bd",
            "owner_id": "941434651743",
            "tags": {
              "Name": "VPC-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "VPC-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group-rule/sgr-0ab9931019f7a42d5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ab9931019f7a42d5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05de3d0c4e9a5fb70",
            "security_group_rule_id": "sgr-0ab9931019f7a42d5",
            "tags": {
              "Name": "Allow all ipv4 traffic public subnet egress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Allow all ipv4 traffic public subnet egress rule-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg_public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group-rule/sgr-0a7167ea0337c5092",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0a7167ea0337c5092",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05de3d0c4e9a5fb70",
            "security_group_rule_id": "sgr-0a7167ea0337c5092",
            "tags": {
              "Name": "Allow all ipv6 traffic public subnet egress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Allow all ipv6 traffic public subnet egress rule-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg_public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group-rule/sgr-02c56a807ff1e989a",
            "cidr_ipv4": "10.1.0.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02c56a807ff1e989a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05de3d0c4e9a5fb70",
            "security_group_rule_id": "sgr-02c56a807ff1e989a",
            "tags": {
              "Name": "Allow all traffic public subnet ingress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Allow all traffic public subnet ingress rule-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg_public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group-rule/sgr-0233429d16d2a838d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0233429d16d2a838d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05de3d0c4e9a5fb70",
            "security_group_rule_id": "sgr-0233429d16d2a838d",
            "tags": {
              "Name": "Allow SSH ingress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Allow SSH ingress rule-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg_public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}